--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "private": true,
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "eslint": "^3.11.0",
+    "eslint-config-vue": "^2.0.1",
+    "eslint-plugin-html": "^1.7.0",
+    "eslint-plugin-vue": "^1.0.0",
     "exorcist": "^0.4.0",
     "uglify-js": "^2.7.4",
     "vue": "^2.1.3",
