--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "vue-js-sample-with-chartjs",
   "private": true,
+  "config": {
+    "output": {
+      "root": "./docs",
+      "js": "./docs/scripts"
+    }
+  },
+  "scripts": {
+    "claen": "npm run clean:js",
+    "clean:js": "rm -f $npm_package_config_output_js/*",
+    "watch": "npm run serve & npm run watch:js",
+    "watch:js": "watchify src/scripts/app.js --outfile 'exorcist $npm_package_config_output_js/app.js.map > $npm_package_config_output_js/app.js' --debug --verbose",
+    "serve": "browser-sync start --server --serveStatic $npm_package_config_output_root/ --files $npm_package_config_output_root/"
+  },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.2",
     "browserify": "^13.1.1",
     "eslint": "^3.11.0",
     "eslint-config-vue": "^2.0.1",
@@ -16,5 +30,14 @@
     "vue": "^2.1.3",
     "vueify": "^9.3.0",
     "watchify": "^3.7.0"
+  },
+  "browser": {
+    "vue": "vue/dist/vue.common"
+  },
+  "browserify": {
+    "transform": [
+      "babelify",
+      "vueify"
+    ]
   }
 }
