--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.2",
     "browserify": "^13.1.1",
+    "chart.js": "^2.4.0",
     "eslint": "^3.11.0",
     "eslint-config-vue": "^2.0.1",
     "eslint-plugin-html": "^1.7.0",
